test_suite/tests/ui/expected-string/boolean.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> tests/ui/expected-string/boolean.rs:5:22
  |
5 |     #[serde(rename = true)]
  |                      ^^^^
